# pickscribe

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  FULL_APP_PLAN.md  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  pickforge.release.json  tsconfig.json  vite.config.ts
.agents/skills/run/: SKILL.md
.github/: check-osv-severity.jq
.github/workflows/: ci.yml  release.yml
assets/branding/: README.md
docs/releases/: UNRELEASED.md
scripts/: check-osv-severity.mjs  install-desktop-integration  install-whisper-cpp-local  install.sh  pickscribe-cleanup-gui  pickscribe-env.sh  pickscribe-gui  pickscribe-terminal-gui  voice-cleanup  voice-cleanup-gui  voice-flow  voice-flow-gui
src/: App.svelte  Float.svelte  app.css  config.rs  history.rs  lib.rs  main.ts  platform.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  file_job.rs  kwin.rs  lib.rs  lifecycle.rs  macos.rs  main.rs  settings.rs  shortcut.rs  tray.rs
src/engine/: audio_segments.rs  cleanup.rs  incremental.rs  levels.rs  media.rs  mod.rs  paste.rs  recorder.rs  segments.rs  sounds.rs  stt.rs  transcript.rs
src/lib/: api.test.ts  api.ts  file-transcribe.test.ts  file-transcribe.ts  flags.ts  platform.test.ts  platform.ts  settingsDisplay.test.ts  settingsDisplay.ts  settingsMerge.test.ts  settingsMerge.ts  studioUpdater.ts  theme.test.ts  theme.ts  updateFixture.ts  updateStartup.test.ts  updateStartup.ts  updater.ts  windowChrome.test.ts  windowChrome.ts
src/lib/components/: FileTranscribe.svelte  ResizeHandles.svelte  Titlebar.svelte  Waveform.svelte  WindowControls.svelte
src/lib/views/: Dashboard.svelte  History.svelte  Settings.svelte
tests/: check-osv-severity.mjs  install-script-smoke.mjs
tests/fixtures/osv/: high.json  informational.json  medium.json  missing-lockfile.json  unscored.json  (+1 more)
