[package]
name = "pickscribe-app"
version = "0.1.2"
edition = "2024"
description = "PickScribe desktop app"
license = "MIT"

[lib]
name = "pickscribe_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Required for production builds: serves the embedded frontend instead of the
# dev server URL. The tauri CLI enables it for `tauri build`; enable it
# manually when building with plain cargo.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pickscribe = { path = ".." }
sentry = "0.42"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-sentry = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
